# python_projekty

./: .coverage  .cursorrules  .env.example  .gitignore  =0.8.0  =4.41.0  README.md  REFACTORING_PLAN.md  instrukcja-dla-agenta.md  main.py  package-lock.json  package.json  pyproject.toml  refactor-workflow.md  requirements.txt  setup.py  setup.sh
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: chat.py
backend/app/api/v1/schemas/: chat.py
backend/app/core/: config.py  deps.py  rate_limit.py  security.py  websocket.py
backend/app/models/: base.py  chat.py  document.py  message.py  tag.py  user.py
backend/app/schemas/: base.py  chat.py  document.py  message.py  tag.py  user.py
backend/app/services/agents/: base.py  orchestrator.py  specialized.py
backend/app/services/ai/: exceptions.py  interfaces.py  service.py
backend/app/services/conversation/: service.py
backend/app/services/ollama/: client.py  exceptions.py  interfaces.py  service.py
backend/tests/: test_agents.py  test_api.py  test_config.py  test_database.py  test_models.py  test_ollama.py  test_schemas.py  test_security.py  test_services.py
backend/tests/api/: test_chat_endpoints.py
backend/tests/api/v1/: test_chat_endpoints.py
backend/tests/services/: test_agents.py  test_ai_service.py  test_conversation_service.py  test_ollama_service.py
config/: settings.py
core/: ai_engine.py  auth.py  config.py  config_manager.py  container.py  conversation.py  database.py  logger.py  (+15 more)
(+61 files in other folders)
